@@ -1,5 +1,7 @@
-* UI: Give form and show pages more consistent label styles
 * Improvement: Add generators for copying view templates into host application
+* UI: Give form and show pages more consistent label styles
+* Bug Fix: Remove erroneous "Showing 5 of 1" messages
+  from has_many relationships on the `show` page.
 
 New in 0.0.12:
 
